<resources>
    <string name="app_name">Go4lunch</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_name">John SMITH</string>
    <string name="nav_header_email">johnsmith@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_one">Your lunch</string>
    <string name="menu_two">Settings</string>
    <string name="menu_three">Logout</string>
    <string name="content_description_icon">Tapez votre recherche ici</string>
    <string name="label">Resto ou Adresse</string>

    <string name="bottom_nav_menu_mapview">Map View</string>
    <string name="bottom_nav_menu_listview">List View</string>
    <string name="bottom_nav_menu_workmates">Workmates</string>

    <string name="facebook_application_id" translatable="false">353882350179117</string>
    <string name="fb_login_protocol_scheme">fb353882350179117</string>

    <!-- LOGIN ACTIVITY -->
    <string name="error_not_connected">Vous devez vous connecter !</string>
    <string name="error_authentication_canceled">Authentification annulée&#8230;</string>
    <string name="error_no_internet">Aucune connexion internet !</string>
    <string name="error_unknown_error">Une erreur inconnue s\'est produite&#8230;</string>
    <string name="connection_succeed">Authentification réussie !</string>
    <string name="button_login_text_logged">Afficher le profil</string>
    <string name="button_login_text_not_logged">Connexion</string>

</resources>