<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_map"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_public_24"
        android:title="@string/bottom_nav_menu_mapview"
        android:layout_weight="1"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nav_list"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_list_24"
        android:title="@string/bottom_nav_menu_listview"
        android:layout_weight="1"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nav_workmates"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_groups_2_24"
        android:title="@string/bottom_nav_menu_workmates"
        android:layout_weight="1"
        app:showAsAction="ifRoom" />
</menu>